--- a/sections/template-customer-register.liquid
+++ b/sections/template-customer-register.liquid
@@ -1,7 +1,7 @@
 <div class="customer-page">
     <div class="customer-Create-section">
       <div class="customer-create-container">
-        <h1 class="signin">Sign In</h1>
+        <h1 class="signin">Create New Account</h1>
         <div class="customer-create-content">
           <form id="customer_create" action="/account/login" method="post">
             {% if form.errors %}
