--- a/sections/template-customer-register.liquid
+++ b/sections/template-customer-register.liquid
@@ -133,7 +133,7 @@
       }
       
       .submit-btn:hover {
-        background-color: #0056b3;
+        background-color: gray;
       }
       
       .alert {
@@ -165,5 +165,20 @@
         }
       }
       
+      .customer-Create-section{
+        box-shadow: 2px 3px 15px 3px gray;
+    padding: 20px;
+    width: 65%;
+    background-color: white;
+}
+.submit-btn{
+
+    font-weight: bold;
+    font-size: 20px;
+    background-color: black;
+}
+
+
+    }
 
 </style>
