--- a/sections/template-customer-register.liquid
+++ b/sections/template-customer-register.liquid
@@ -67,7 +67,7 @@
 
 
 
-<script>
+{% comment %}       
     function showRecoverForm() {
       document.querySelector('.customer-login-section').style.display = 'none';
       document.querySelector('.recover-password-section').style.display = 'block';
@@ -77,7 +77,7 @@
       document.querySelector('.recover-password-section').style.display = 'none';
       document.querySelector('.customer-login-section').style.display = 'block';
     }
-  </script>
+  </script> {% endcomment %}
 
 
 
