--- a/sections/template-reset-password.liquid
+++ b/sections/template-reset-password.liquid
@@ -24,6 +24,17 @@
               >
             </div>
             <div class="form-group">
+                <label for="customer-password">Confirm Password</label>
+                <input
+                  type="password"
+                  id="customer-password"
+                  name="customer[password_confirmation]"
+                  class="input-field"
+                  required
+                  placeholder="confirm your password"
+                >
+              </div>
+            <div class="form-group">
               <button type="submit" class="submit-btn">Reset Password</button>
             </div>
           </form>
