--- a/sections/template-reset-password.liquid
+++ b/sections/template-reset-password.liquid
@@ -24,10 +24,10 @@
               >
             </div>
             <div class="form-group">
-                <label for="customer-password">Confirm Password</label>
+                <label for="password_confirmation ">Confirm Password</label>
                 <input
                   type="password"
-                  id="customer-password"
+                  id="password_confirmation "
                   name="customer[password_confirmation]"
                   class="input-field"
                   required
