--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -70,10 +70,10 @@
             <h3 class="subtottl">SubTotal:- {{ cart.total_price |money }}</h3>
             </div>
             <div class="updte">
-              <button type="update_button" name="update-button" class="update-button">Update</button>
+              <button type="submit" name="update" class="update-button">Update</button>
             </div>
           <div class="checkout-section">
-            <button type="checkout_button" name="checkout-button" class="checkout-button">Checkout</button>
+            <button type="button" name="checkout" class="checkout-button">Checkout</button>
           </div>
               </div>
       </form>
