--- a/sections/template-cart.liquid
+++ b/sections/template-cart.liquid
@@ -73,7 +73,7 @@
               <button type="submit" name="update" class="update-button">Update</button>
             </div>
           <div class="checkout-section">
-            <button type="button" name="checkout" class="checkout-button">Checkout</button>
+            <button type="submit" name="checkout" class="checkout-button">Checkout</button>
           </div>
               </div>
       </form>
