--- a/sections/template-account.liquid
+++ b/sections/template-account.liquid
@@ -1,1 +1,17 @@
-hello
+<div class="account-section">
+    <h1>Account</h1>
+    <div class="account-container">
+        <div class="account-content">
+            {% if number_of_orders >0 %} 
+
+            {% else %}
+         <div class="else-condition">
+           <h2 class="else-cot"> you currently don't have any orders</h2>
+        </div>
+            {% endif %}
+        
+        </div>
+    </div>
+</div>
+<div class="account-section"></div>
+<div class="account-section"></div>
