--- a/sections/template-account.liquid
+++ b/sections/template-account.liquid
@@ -2,7 +2,18 @@
     <h1>Account</h1>
     <div class="account-container">
         <div class="account-content">
+            {% assign  number_of_orders = customer.orders |size %}
             {% if number_of_orders >0 %} 
+            <div class="heading-conten_order">
+            <h2 class="heading">Order History</h2>
+            {% paginate collection.products by 12 %}
+            {% for product in collection.products  %}
+                
+            
+            {% endfor  %}
+            
+            {% endpaginate %}
+            </div>
 
             {% else %}
          <div class="else-condition">
