--- a/sections/template-account.liquid
+++ b/sections/template-account.liquid
@@ -1,4 +1,4 @@
-<div class="account-section">
+{% comment %} <div class="account-section">
     <h1>Account</h1>
     <div class="account-container">
         <div class="account-content">
@@ -9,9 +9,18 @@
             {% paginate customer.orders by 5 %}
             <div>
             {% for order in customer.orders %}
-             <div class="optio">
-            {{ order.name }}
-            </div>
+            <div class="optio">
+                
+                {% if order.line_items.first.image %}
+                   <img class="w-full h-full object-center object-cover"
+                    src="{{order.line_items.first.image | img_url: 'medium' }}"
+                    alt="{{order.line_items.first.image.alt)}"> 
+                    {% endif %}
+            
+            </div> 
+
+            
+               
             
             {% endfor  %}
         </div>
@@ -27,6 +36,36 @@
         
         </div>
     </div>
+</div> {% endcomment %}
+
+<div class="account-section">
+    <h1>Account</h1>
+    <div class="account-container">
+        <div class="account-content">
+            {% assign number_of_orders = customer.orders | size %}
+            {% if number_of_orders > 0 %} 
+            <div class="heading-content_order">
+                <h2 class="heading">Order History</h2>
+                {% paginate customer.orders by 5 %}
+                <div class="orders-list">
+                    {% for order in customer.orders %}
+                    <div class="order-item">
+                        {% if order.line_items.first.image %}
+                        <img class="order-image"
+                             src="{{ order.line_items.first.image | img_url: 'medium' }}"
+                             alt="{{ order.line_items.first.image.alt }}">
+                        {% endif %}
+                        <!-- Add additional order details here if needed -->
+                    </div>
+                    {% endfor %}
+                </div>
+                {% endpaginate %}
+            </div>
+            {% else %}
+            <div class="no-orders">
+                <h2 class="no-orders-message">You currently don't have any orders</h2>
+            </div>
+            {% endif %}
+        </div>
+    </div>
 </div>
-<div class="account-section"></div>
-<div class="account-section"></div>
